<resources>
    <string name="app_name">GomrukKolkulatoru</string>

    <string-array name="autoType">
        <item>Minik avtomobili</item>
    </string-array>

    <string-array name="engineType">

        <item>Benzin</item>
        <item>Dizel</item>
        <item>Qaz</item>
        <item>Hibrid-benzin</item>
        <item>Hibrid-dizel</item>
        <item>Elektrik</item>

    </string-array>

    <string name="azad_ticaret">Azad ticarət sazişi bağlanan ölkədə istehsal olunub və oradan gətirilir</string>
    <string name="diger_olke">Digər ölkələr</string>
    <string name="type_of_transport">Nəqliyyat vasitəsinin növü</string>
    <string name="customs_of_car">Avtomobilin gömrük dəyəri</string>
    <string name="engine_size">Mühərrik həcmi cm³</string>
    <string name="hesabla">Hesabla</string>
    <string name="clear">Təmizlə</string>
    <string name="engine_type">Mühərrikin növü</string>
    <string name="issuedate">İstehsal tarixi</string>
    <string name="mense">Mənşə (istehsal) ölkəsi və göndərən ölkə haqqında</string>
    <string name="result">Nəticə</string>
    <string name="eminsiniz">Silmək istədiyinizə əminsiniz?</string>
    <string name="xanalari_doldurun">Zəhmət olmasa xanaları tam doldurun.</string>


</resources>