<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            android:paddingTop="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/clearsans_medium"
                android:text="Nəqliyyat vasitələri üçün gömrük kalkulyatoru"
                android:textAlignment="center"
                android:textSize="20sp">

            </TextView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/autoTypeLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:startIconDrawable="@drawable/baseline_directions_car_24">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spinnerAutoType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clearsans_regular"

                    android:hint="@string/type_of_transport"
                    android:inputType="none">

                </com.google.android.material.textfield.MaterialAutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/autoEngineTypeLayout"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/spinnerEngineType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clearsans_regular"
                    android:hint="@string/engine_type"

                    android:inputType="none">

                </com.google.android.material.textfield.MaterialAutoCompleteTextView>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/editTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/customs_of_car"
                    app:startIconDrawable="@drawable/baseline_attach_money_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/priceEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/clearsans_regular"
                        android:inputType="numberDecimal"
                        android:maxLength="9"
                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/engine_size">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/engineEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/clearsans_regular"
                        android:inputType="number"

                        android:maxLength="5"
                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/issuedate"
                    app:startIconDrawable="@drawable/baseline_calendar_month_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/issueDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:fontFamily="@font/clearsans_regular"
                        android:inputType="datetime"
                        android:maxLength="12"
                        android:maxLines="1">

                    </com.google.android.material.textfield.TextInputEditText>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteX="83dp"
                tools:layout_editor_absoluteY="349dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clearsans_regular"
                    android:text="@string/mense"></TextView>

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clearsans_regular"
                    android:text="@string/diger_olke"
                    android:textSize="18sp">

                </RadioButton>

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/clearsans_regular"
                    android:text="@string/azad_ticaret"
                    android:textSize="18sp">

                </RadioButton>
            </RadioGroup>

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/clearsans_bold"
                android:text="@string/hesabla"
                android:textAllCaps="true">

            </Button>

            <Button
                android:id="@+id/clearButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:enabled="false"
                android:fontFamily="@font/clearsans_bold"
                android:text="@string/clear"
                android:textAllCaps="true">

            </Button>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

